syntax = "proto3";
option go_package = "/auth";

message AuthData {
  string name = 1;
  string token = 2;
  int64 createDate = 3;
  int64  expireDate = 4;
}

message Verify {
    ResponseType status = 1;
    AuthData auth = 2;
}

enum ResponseType {
  SUCCESS = 0;
  FAILED = 1;
  EXPIRED = 2;
}

message CreateTokenRequest {
  AuthData auth = 1;
}

message CreateTokenResponse {
  AuthData auth = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  Verify verify = 1;
}

service AuthService {
  rpc CreateAuth(CreateTokenRequest) returns (CreateTokenResponse);
  rpc ValidateAuth(ValidateTokenRequest) returns (ValidateTokenResponse);
}